# FrRing

./: .gitignore  CMakeLists.txt  PcapperRing.pro  PcapperRing.pro.user.259bab8  README.md  connectionthread.cpp  connectionthread.h  frameringbuffer.cpp  frameringbuffer.h  frring.cpp  frring.h  frring_test.cpp  frring_test.h  main.cpp  pcapcommon.cpp  pcapcommon.h  pcapproducer.cpp  pcapproducer.h
src/: frring.h  frring_2memcp.h  frring_ifbranches.h
src/implementations/: frring_2memcp.h  frring_buffer.h  frring_ifbranches.h  frring_tools.h
tests/: CMakeLists.txt  a.out  frring_test.h  implementationchecker.cpp  implementationchecker.h  implementationtests.h  main.cpp
tests/build-frring_tests-5_15_5-Debug/.qtc_clangd/: compile_commands.json
